# BuildToolWithLearnOpenGL

./: .gitignore  .gitmodules  README.md
01_CMake/01_HelloWindow/01_SourceBuild/: CMakePresets.json  CMakeUserPresets.json
01_CMake/01_HelloWindow/01_SourceBuild/3rd/glad/: CMakeLists.txt
01_CMake/01_HelloWindow/01_SourceBuild/3rd/glad/include/glad/: glad.h
01_CMake/01_HelloWindow/01_SourceBuild/src/: main.cpp
01_CMake/01_HelloWindow/02_FetchContent/: CMakeLists.txt  README.md
01_CMake/01_HelloWindow/02_FetchContent/3rd/glad/: CMakeLists.txt
01_CMake/01_HelloWindow/03_Vcpkg/: CMakeLists.txt  CMakePresets.json  README.md
01_CMake/02_Introduction/: CMakeLists.txt  vcpkg.json
01_CMake/02_Introduction/3rd/glm/: CMakeLists.txt
01_CMake/02_Introduction/3rd/stb_image/: CMakeLists.txt
01_CMake/02_Introduction/src/: main.cpp  shader.hpp
01_CMake/History/CMakeLearn/: README.md
01_HelloWindow/: CMakeLists.txt  README.md
01_SourceBuild/: CMakeLists.txt  README.md
02_DynamicHelloWindow/: CMakeLists.txt  README.md
02_FetchContent/: CMakeLists.txt  CMakePresets.json  README.md
02_XMake/01_HelloWindow/: xmake.lua
02_XMake/01_HelloWindow/src/: main.cpp  stdafx.hpp
02_XMake/02_Introduction/: xmake.lua
02_XMake/02_Introduction/3rd/glad/src/: glad.c
02_XMake/02_Introduction/src/: stdafx.hpp
02_XMake/03_Light/: xmake.lua
02_XMake/03_Light/3rd/glad/include/glad/: glad.h
02_XMake/03_Light/resources/shaders/: multiple_lights.fs
02_XMake/03_Light/src/: main.cpp  shader.hpp  stdafx.hpp
02_XMake/04_Model/: xmake.lua
02_XMake/04_Model/3rd/glad/src/: glad.c
02_XMake/04_Model/3rd/glm/: xmake.lua
02_XMake/04_Model/resources/shaders/: model_loading.fs  model_loading.vs
02_XMake/04_Model/src/: camera.hpp  main.cpp  mesh.hpp  model.hpp  stdafx.hpp
03_Vcpkg/: CMakeLists.txt  CMakePresets.json  README.md
03_Vcpkg/src/: main.cpp
03_install/: CMakeLists.txt  README.md
03_install/mock_install/x64-Debug/lib/: spdlogd.lib
03_install/mock_install/x64-Debug/lib/cmake/spdlog/: spdlogConfigTargets.cmake
03_install/mock_install/x64-Debug/lib/pkgconfig/: glfw3.pc  spdlog.pc
03_install/mock_lib/glfw-3.4/: CMakeLists.txt
03_install/mock_lib/spdlog-1.14.1/: CMakeLists.txt
04_vcpkg/: CMakeLists.txt  CMakePresets.json
04_xmake/: xmake.lua
04_xmake/src/: main.cpp  stdafx.hpp
